2006-06-26  David Hampton  <hampton@employees.org>

	* src/pixmaps/gnucash-icon.png:
	* src/pixmaps/appicon.png: Add new application icon.

2006-06-25  Joshua Sled  <jsled@asynchronous.org>

	* src/pixmaps/gnucash_splash.png: reduced-size splash image.

2006-06-24  Derek Atkins  <derek@ihtfp.com>

	Allow building from either SVN or SVK
	* util/gnc-svnversion: obtain revision info from SVN or SVK.
	  Deals with lndir tree and both svn and svk checkouts.
	* configure.in:
	* src/gnome-utils/Makefile.am:
	  use new gnc-svnversion script instead of calling out to svn
	  directly.
	* moved glade-fixup to util subdir

2006-06-20  Christian Stimming <stimming@tuhh.de>

	* src/engine/iso-4217-currencies.scm: Add Suriname Dollar
	currency; replaces SRG, but due to a non-unity exchange rate we
	cannot have it replaced automatically. #319084

	* src/backend/file/io-gncxml-v2.c: Use waitpid() only if
	<sys/wait.h> is available. Unavailable on win32.

2006-06-18  Chris Lyttle  <chris@wilddev.net>

	* NEWS: Added some text about the release.
	* configure.in: Change to version 1.9.8

2006-06-18  Christian Stimming  <stimming@tuhh.de>

	* accounts/de_DE/acctchrt_skr03.gnucash-xea: Add new SKR03 account
	template (in addition to the existing SKR04) by Oliver Vollmer
	<ovo@mx.lihas.de>.

r14377 | chris | 2006-06-16 21:00:18 -0400 (Fri, 16 Jun 2006) | 2 lines

   M /gnucash/trunk/src/engine/gnc-commodity.c
   M /gnucash/trunk/src/engine/iso-4217-currencies.scm

   Update mnemonic for Mexican Peso.  Fixes Bug #345048.

r14375 | chris | 2006-06-16 20:38:08 -0400 (Fri, 16 Jun 2006) | 3 lines

   M /gnucash/trunk/src/gnome-utils/dialog-utils.c

   Make the keypad 'minus' key enter a dash in the date entry for ISO dates.
   Fixes Bug #345096.

r14373 | chris | 2006-06-16 19:14:13 -0400 (Fri, 16 Jun 2006) | 3 lines

   M /gnucash/trunk/src/register/register-gnome/gnucash-sheet.c

   Restore non-editing state when cancelled editing is complete.